--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -260,5 +260,7 @@ So it's important to be able to log, debug, and test your Appwrite Functions in 
 <h2><a href="#upgrade" id="upgrade">Upgrade</a></h2>
 <p>
     Appwrite Functions received major upgrades in Appwrite version 1.4. 
-    If you still have functions from previous versions, [TODO: @matej what is the consequence what should they do?]
+    If you still have functions from previous versions, 
 </p>
+
+[TODO: @luke what is the consequence what should they do? Old functions still work. Migration guide]
